# KASS

./: .env.example  .gitignore  CLAUDE.md  kalshi_alpha_schema.sql  pyproject.toml
analysis/queries/: 01_system_health.sql  02_signal_overview.sql  03_signal_quality.sql  04_threshold_tuning.sql  05_market_deep_dive.sql
grafana/dashboards/: 01_system_health.json  02_signal_quality.json  03_market_activity.json  04_threshold_tuning.json
processes/: ecosystem.config.js
scripts/: provision_grafana.py  setup_db.sh  setup_grafana.sh  setup_mac.sh  setup_redis.sh
sql/: 002_create_tables.sql  003_create_hypertables.sql  004_create_indexes.sql  005_create_views.sql  006_retention_policies.sql  007_signal_tables.sql
src/: config.py
src/cache/: redis_client.py  state.py  streams.py
src/cli/: display.py  main.py
src/cli/commands/: market.py  markets.py  query.py  signals.py  status.py  tail.py
src/discovery/: market_scanner.py  series_mapper.py  subscription_mgr.py
src/ingestion/: rest_client.py  ws_auth.py  ws_client.py  ws_router.py
src/models/: __init__.py  lifecycle.py  market.py  orderbook.py  ticker.py  trade.py
src/monitoring/: alerts.py  health.py  price_snapshots.py  view_refresher.py
src/persistence/: backfill.py  db.py  gap_detector.py
src/persistence/writers/: lifecycle_writer.py  orderbook_writer.py  signal_writer.py  ticker_writer.py  trade_writer.py
src/signals/: base.py  config.py  models.py  streams.py
src/signals/aggregator/: __main__.py  aggregator.py
src/signals/cross_market/: __main__.py  lifecycle_alpha.py  propagation.py
tests/: conftest.py  test_discovery.py  test_models.py  test_persistence.py  test_signals.py  test_ws_client.py
tests/integration/: conftest.py  test_full_pipeline.py  test_signal_pipeline.py
(+5 files in other folders)
