[project]
name = "kalshi-alpha"
version = "0.1.0"
description = "Kalshi Alpha Signal System (KASS) - Phase 1: Data Infrastructure & Ingestion"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "psycopg[binary,pool]>=3.1",
    "redis>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=41.0",
    "httpx>=0.25",
    "structlog>=23.0",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
